[tool.poetry]
name = "space-invaders-pygame"
version = "0.1.0"
description = ""
authors = ["Alexander <testmail>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"
pylint = "^3.0.2"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
